--- a/new/discography.html
+++ b/new/discography.html
@@ -5,9 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="styles/jquery.fancybox.css">
   <meta name="description" content="">
   <meta name="keywords" content="">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="js/jquery.fancybox.min.js"></script>
   <script src="js/script.js"></script>
 </head>
 <body>
@@ -35,7 +37,7 @@
           </div>
           <div class="release-info">
             <div class="release-info-cover">
-              <a href="#">
+              <a data-fancybox data-caption="Bitsa EP, 2016" href="images/bitsa/bitsa-cover.jpg">
                 <img src="images/bitsa/bitsa-thumbnail.jpg" alt="Bitsa EP, 2016">
                 <i class="fa fa-search-plus" aria-hidden="true"></i>
               </a>
@@ -70,7 +72,7 @@
           </div>
           <div class="release-info">
             <div class="release-info-cover">
-              <a href="#">
+              <a data-fancybox data-caption="The Room EP, 2014" href="images/room/room-cover.jpg">
                 <img src="images/room/room-thumbnail.jpg" alt="The Room EP, 2014">
                 <i class="fa fa-search-plus" aria-hidden="true"></i>
               </a>
@@ -106,7 +108,7 @@
           </div>
           <div class="release-info">
             <div class="release-info-cover">
-              <a href="#">
+              <a data-fancybox data-caption="Two Winters Only (self-titled), 2010" href="images/two/two-cover.jpg">
                 <img src="images/two/two-thumbnail.jpg" alt="Two Winters Only (self-titled), 2010">
                 <i class="fa fa-search-plus" aria-hidden="true"></i>
               </a>
