--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
           <a href="#" class="fa fa-bars" aria-hidden="true"></a>
           <ul class="nav-list">
             <li class="nav-item selected">Home</li>
-            <li class="nav-item"><a href="about.html">About</a></li>
-            <li class="nav-item"><a href="discography.html">Discography</a></li>
-            <li class="nav-item"><a href="contact.html">Contact</a></li>
+            <li class="nav-item"><a href="about">About</a></li>
+            <li class="nav-item"><a href="discography">Discography</a></li>
+            <li class="nav-item"><a href="contact">Contact</a></li>
           </ul>
         </nav>
         <div class="slogan">Russian post-metal/ambient act Two Winters Only combines heavy guitar sound with gentle electronic soundscapes. The band defines their style as&nbsp;&ldquo;post-metal with non-metal attitude&rdquo;.</div>
