--- a/about.html
+++ b/about.html
@@ -16,15 +16,15 @@
   <div class="page-wrapper">
     <div class="page">
       <header class="header">
-        <h1 class="logo-title"><a href="index.html">Two Winters Only</a></h1>
+        <h1 class="logo-title"><a href="index">Two Winters Only</a></h1>
         <p class="logo-subtitle">post-metal duet from Pushchino, Russia</p>
         <nav class="nav">
           <a href="#" class="fa fa-bars" aria-hidden="true"></a>
           <ul class="nav-list">
-            <li class="nav-item"><a href="index.html">Home</a></li>
+            <li class="nav-item"><a href="index">Home</a></li>
             <li class="nav-item selected">About</li>
-            <li class="nav-item"><a href="discography.html">Discography</a></li>
-            <li class="nav-item"><a href="contact.html">Contact</a></li>
+            <li class="nav-item"><a href="discography">Discography</a></li>
+            <li class="nav-item"><a href="contact">Contact</a></li>
           </ul>
         </nav>
       </header>
