Add more images

--- a/discography.html
+++ b/discography.html
@@ -37,9 +37,15 @@
           </div>
           <div class="release-info">
             <div class="release-info-cover">
-              <a data-fancybox data-caption="Bitsa EP, 2016" href="images/bitsa/bitsa-cover.jpg">
+              <a data-fancybox="bitsa" data-caption="Bitsa EP, 2016" href="images/bitsa/cover.png">
                 <img src="images/bitsa/bitsa-thumbnail.jpg" alt="Bitsa EP, 2016">
                 <i class="fa fa-search-plus" aria-hidden="true"></i>
+              </a>
+              <a data-fancybox="bitsa" data-caption="Bitsa EP, 2016" href="images/bitsa/inside.png" style="display: none;">
+                <img src="images/bitsa/bitsa-thumbnail.jpg" alt="Bitsa EP, 2016">
+              </a>
+              <a data-fancybox="bitsa" data-caption="Bitsa EP, 2016" href="images/bitsa/back.png" style="display: none;">
+                <img src="images/bitsa/bitsa-thumbnail.jpg" alt="Bitsa EP, 2016">
               </a>
             </div>
             <div class="release-info-desc">
@@ -72,7 +78,7 @@
           </div>
           <div class="release-info">
             <div class="release-info-cover">
-              <a data-fancybox data-caption="The Room EP, 2014" href="images/room/room-cover.jpg">
+              <a data-fancybox data-caption="The Room EP, 2014" href="images/room/cover.jpg">
                 <img src="images/room/room-thumbnail.jpg" alt="The Room EP, 2014">
                 <i class="fa fa-search-plus" aria-hidden="true"></i>
               </a>
@@ -108,9 +114,12 @@
           </div>
           <div class="release-info">
             <div class="release-info-cover">
-              <a data-fancybox data-caption="Two Winters Only (self-titled), 2010" href="images/two/two-cover.jpg">
+              <a data-fancybox="two" data-caption="Two Winters Only (self-titled), 2010" href="images/two/two-cover.jpg">
                 <img src="images/two/two-thumbnail.jpg" alt="Two Winters Only (self-titled), 2010">
                 <i class="fa fa-search-plus" aria-hidden="true"></i>
+              </a>
+              <a data-fancybox="two" data-caption="Two Winters Only (self-titled), 2010" href="images/two/two-back.jpg" style="display: none;">
+                <img src="images/bitsa/bitsa-thumbnail.jpg" alt="Bitsa EP, 2016">
               </a>
             </div>
             <div class="release-info-desc">
