--- a/discography.html
+++ b/discography.html
@@ -78,7 +78,7 @@
           </div>
           <div class="release-info">
             <div class="release-info-cover">
-              <a data-fancybox data-caption="The Room EP, 2014" href="images/room/cover.jpg">
+              <a data-fancybox data-caption="The Room EP, 2014" href="images/room/cover.png">
                 <img src="images/room/room-thumbnail.jpg" alt="The Room EP, 2014">
                 <i class="fa fa-search-plus" aria-hidden="true"></i>
               </a>
