--- a/discography.html
+++ b/discography.html
@@ -16,12 +16,12 @@
   <div class="page-wrapper">
     <div class="page">
       <header class="header">
-        <h1 class="logo-title"><a href="index">Two Winters Only</a></h1>
+        <h1 class="logo-title"><a href="/">Two Winters Only</a></h1>
         <p class="logo-subtitle">post-metal duet from Pushchino, Russia</p>
         <nav class="nav">
           <a href="#" class="fa fa-bars" aria-hidden="true"></a>
           <ul class="nav-list">
-            <li class="nav-item"><a href="index">Home</a></li>
+            <li class="nav-item"><a href="/">Home</a></li>
             <li class="nav-item"><a href="about">About</a></li>
             <li class="nav-item selected">Discography</li>
             <li class="nav-item"><a href="contact">Contact</a></li>
