--- a/discography.html
+++ b/discography.html
@@ -37,14 +37,14 @@
           </div>
           <div class="release-info">
             <div class="release-info-cover">
-              <a data-fancybox="bitsa" data-caption="Bitsa EP, 2016" href="images/bitsa/cover.png">
+              <a data-fancybox="bitsa-gallery" data-caption="Bitsa EP, 2016" href="images/bitsa/cover.png">
                 <img src="images/bitsa/bitsa-thumbnail.jpg" alt="Bitsa EP, 2016">
                 <i class="fa fa-search-plus" aria-hidden="true"></i>
               </a>
-              <a data-fancybox="bitsa" data-caption="Bitsa EP, 2016" href="images/bitsa/inside.png" style="display: none;">
+              <a data-fancybox="bitsa-gallery" data-caption="Bitsa EP, 2016" href="images/bitsa/inside.png" style="display: none;">
                 <img src="images/bitsa/bitsa-thumbnail.jpg" alt="Bitsa EP, 2016">
               </a>
-              <a data-fancybox="bitsa" data-caption="Bitsa EP, 2016" href="images/bitsa/back.png" style="display: none;">
+              <a data-fancybox="bitsa-gallery" data-caption="Bitsa EP, 2016" href="images/bitsa/back.png" style="display: none;">
                 <img src="images/bitsa/bitsa-thumbnail.jpg" alt="Bitsa EP, 2016">
               </a>
             </div>
@@ -114,11 +114,11 @@
           </div>
           <div class="release-info">
             <div class="release-info-cover">
-              <a data-fancybox="two" data-caption="Two Winters Only (self-titled), 2010" href="images/two/two-cover.jpg">
+              <a data-fancybox="two-gallery" data-caption="Two Winters Only (self-titled), 2010" href="images/two/two-cover.jpg">
                 <img src="images/two/two-thumbnail.jpg" alt="Two Winters Only (self-titled), 2010">
                 <i class="fa fa-search-plus" aria-hidden="true"></i>
               </a>
-              <a data-fancybox="two" data-caption="Two Winters Only (self-titled), 2010" href="images/two/two-back.jpg" style="display: none;">
+              <a data-fancybox="two-gallery" data-caption="Two Winters Only (self-titled), 2010" href="images/two/two-back.jpg" style="display: none;">
                 <img src="images/bitsa/bitsa-thumbnail.jpg" alt="Bitsa EP, 2016">
               </a>
             </div>
