--- a/index.html
+++ b/index.html
@@ -6,29 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/style.css">
   <link rel="stylesheet" href="styles/jquery.fancybox.css">
+  <link rel="stylesheet" href="styles/modal-video.min.css">
+  <link rel="shortcut icon" href="favicon.jpg">
+  <link rel="apple-touch-icon" href="favicon.jpg">
   <meta name="description" content="">
   <meta name="keywords" content="">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="js/jquery.fancybox.min.js"></script>
-  <script src="js/script.js"></script>
 </head>
 <body>
   <div class="page-wrapper">
     <div class="page main">
-      <header class="header">
-        <h1 class="logo-title">Two Winters Only</h1>
-        <p class="logo-subtitle">post-metal duet from Pushchino, Russia</p>
-        <nav class="nav">
-          <a href="#" class="fa fa-bars" aria-hidden="true"></a>
-          <ul class="nav-list">
-            <li class="nav-item selected">Home</li>
-            <li class="nav-item"><a href="about">About</a></li>
-            <li class="nav-item"><a href="discography">Discography</a></li>
-            <li class="nav-item"><a href="contact">Contact</a></li>
-          </ul>
-        </nav>
-        <div class="slogan">Russian post-metal/ambient act Two Winters Only combines heavy guitar sound with gentle electronic soundscapes. The band defines their style as&nbsp;&ldquo;post-metal with non-metal attitude&rdquo;.</div>
-      </header>
       <section class="slides">
         <div class="slide slide-bitsa">
           <div class="release">
@@ -45,7 +31,11 @@
               </div>
               <div class="release-info-desc">
                 <ol>
-                  <li>Messe</li>
+                  <li>
+                    <a class="release-play-button" data-video-id="LTWcLZ8LloU" href="#">
+                      <i class="fa fa-play-circle" aria-hidden="true"></i> Messe
+                    </a>
+                  </li>
                   <li>Recap</li>
                   <li>Withered Apples</li>
                 </ol>
@@ -68,7 +58,11 @@
               </div>
               <div class="release-info-desc">
                 <ol>
-                  <li>Rabbit's Clock Pointer</li>
+                  <li>
+                    <a class="release-play-button" data-video-id="FNIFhPkYdzI" href="#">
+                      <i class="fa fa-play-circle" aria-hidden="true"></i> Rabbit's Clock Pointer
+                    </a>
+                  </li>
                   <li>17 (...try To Become That Shape)</li>
                   <li>Rectifier</li>
                   <li>Open Door</li>
@@ -94,7 +88,11 @@
                 <ol>
                   <li>Intro</li>
                   <li>Winter Shades</li>
-                  <li>Night Aquatic Ropes</li>
+                  <li>
+                    <a class="release-play-button" data-video-id="vGdYeTyj9Jc" href="#">
+                      <i class="fa fa-play-circle" aria-hidden="true"></i> Night Aquatic Ropes
+                    </a>
+                  </li>
                   <li>Spring</li>
                   <li>Spokes & Wheels</li>
                   <li>Excuse for The Pain</li>
@@ -107,6 +105,20 @@
           </div>
         </div>
       </section>
+      <header class="header">
+        <h1 class="logo-title">Two Winters Only</h1>
+        <p class="logo-subtitle">post-metal duet from Pushchino, Russia</p>
+        <nav class="nav">
+          <a href="#" class="fa fa-bars" aria-hidden="true"></a>
+          <ul class="nav-list">
+            <li class="nav-item selected">Home</li>
+            <li class="nav-item"><a href="about">About</a></li>
+            <li class="nav-item"><a href="discography">Discography</a></li>
+            <li class="nav-item"><a href="contact">Contact</a></li>
+          </ul>
+        </nav>
+        <div class="slogan">Russian post-metal/ambient act Two Winters Only combines heavy guitar sound with gentle electronic soundscapes. The band defines their style as&nbsp;&ldquo;post-metal with non-metal attitude&rdquo;.</div>
+      </header>
       <div class="slide-controls">
         <button class="slide-control slide-control-prev"></button>
         <button class="slide-control slide-control-next"></button>
@@ -122,5 +134,9 @@
       </footer>
     </div>
   </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="js/jquery.fancybox.min.js"></script>
+  <script src="js/jquery-modal-video.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
