--- a/discography.html
+++ b/discography.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
   <title>Discography — Two Winters Only</title>
   <meta charset="UTF-8">
@@ -13,23 +13,74 @@
   <script src="js/script.js"></script>
 </head>
 <body>
-  <div class="page-wrapper">
-    <div class="page">
-      <header class="header">
-        <h1 class="logo-title"><a href="/">Two Winters Only</a></h1>
-        <p class="logo-subtitle">post-metal duet from Pushchino, Russia</p>
-        <nav class="nav">
-          <a href="#" class="fa fa-bars" aria-hidden="true"></a>
-          <ul class="nav-list">
-            <li class="nav-item"><a href="/">Home</a></li>
-            <li class="nav-item"><a href="about">About</a></li>
-            <li class="nav-item selected">Discography</li>
-            <li class="nav-item"><a href="contact">Contact</a></li>
-          </ul>
-        </nav>
-      </header>
+  <div class="page">
+    <header class="header">
+      <div class="header-logo">
+        <a href="/">Two Winters Only</a>
+      </div>
+      <p class="header-title">post-metal duet from Pushchino, Russia</p>
+      <div class="header-slogan">Russian post-metal/ambient act Two Winters Only combines heavy guitar sound with gentle electronic soundscapes. The band defines their style as&nbsp;&ldquo;post-metal with non-metal attitude&rdquo;.</div>
+    </header>
+    <nav class="nav">
+      <ul class="nav-list">
+        <li class="nav-item"><a href="/">Home</a></li>
+        <li class="nav-item"><a href="about">About</a></li>
+        <li class="nav-item selected">Discography</li>
+        <li class="nav-item"><a href="contact">Contact</a></li>
+      </ul>
+    </nav>
+    <main class="main">
       <article class="article discography">
         <h2>Discography</h2>
+        <div class="release">
+          <div class="release-header">
+            <h2 class="release-title" id="359">359</h2>
+            <p class="release-additional">post-metal, 2021</p>
+          </div>
+          <div class="release-info">
+            <div class="release-info-cover">
+              <a data-fancybox="359-gallery" data-caption="359, 2021" href="images/359/cover.png">
+                <img src="images/359/359-thumbnail.jpg" alt="359, 2021">
+                <i class="fa fa-search-plus" aria-hidden="true"></i>
+              </a>
+              <a data-fancybox="359-gallery" data-caption="359, 2021" href="images/359/inside.jpg" style="display: none;">
+                <img src="images/359/359-thumbnail.jpg" alt="359, 2021">
+              </a>
+              <a data-fancybox="359-gallery" data-caption="359, 2021" href="images/359/inside1.jpg" style="display: none;">
+                <img src="images/359/359-thumbnail.jpg" alt="359, 2021">
+              </a>
+              <a data-fancybox="359-gallery" data-caption="359, 2021" href="images/359/inside2.jpg" style="display: none;">
+                <img src="images/359/359-thumbnail.jpg" alt="359, 2021">
+              </a>
+            </div>
+            <div class="release-info-desc">
+              <ol>
+                <li>359 <span class="duration">05:12</span></li>
+                <li>31-05 part1 <span class="duration">07:11</span></li>
+                <li>Cosm <span class="duration">04:16</span></li>
+                <li>Bicycle Rally <span class="duration">03:41</span></li>
+                <li>9-11 part1 <span class="duration">04:49</span></li>
+                <li>9-11 part2 <span class="duration">03:05</span></li>
+                <li>Declann <span class="duration">04:32</span></li>
+                <li>31-05 part2 <span class="duration">07:48</span></li>
+                <li>PS Happy Birthday <span class="duration">04:09</span></li>
+              </ol>
+              <p class="release-info-text">9 tracks, 43:23</p>
+            </div>
+          </div>
+          <div class="release-footer">
+            <p class="release-footer-text">
+              Recorded and mixed at Aralot Studios.<br>
+              Mastered by James Plotkin.
+            </p>
+            <div class="release-footer-download">
+              <div class="release-footer-download-title">Download:</div>
+              <div class="release-footer-download-links">
+                <a href="https://twowintersonly.bandcamp.com/album/359"><i class="fa fa-bandcamp" aria-hidden="true"></i> bandcamp</a>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="release">
           <div class="release-header">
             <h2 class="release-title" id="bitsa">Bitsa EP</h2>
@@ -149,16 +200,16 @@
           </div>
         </div>
       </article>
-      <footer class="footer">
-        <ul class="social">
-          <li class="social-item"><a href="https://www.youtube.com/channel/UCr1UxgPRgd7GG3JZIl23Rzw" class="fa fa-youtube" aria-hidden="true"></a></li>
-          <li class="social-item"><a href="https://www.facebook.com/twowintersonlymusic" class="fa fa-facebook-official" aria-hidden="true"></a></li>
-          <li class="social-item"><a href="https://www.last.fm/music/Two+Winters+Only" class="fa fa-lastfm-square" aria-hidden="true"></a></li>
-          <li class="social-item"><a href="https://soundcloud.com/twowintersonly" class="fa fa-soundcloud" aria-hidden="true"></a></li>
-          <li class="social-item"><a href="https://vk.com/twowintersonly" class="fa fa-vk" aria-hidden="true"></a></li>
-        </ul>
-      </footer>
-    </div>
+    </main>
+    <footer class="footer">
+      <ul class="social">
+        <li class="social-item"><a href="https://www.youtube.com/channel/UCr1UxgPRgd7GG3JZIl23Rzw" class="fa fa-youtube" aria-hidden="true"></a></li>
+        <li class="social-item"><a href="https://www.facebook.com/twowintersonlymusic" class="fa fa-facebook-official" aria-hidden="true"></a></li>
+        <li class="social-item"><a href="https://www.last.fm/music/Two+Winters+Only" class="fa fa-lastfm-square" aria-hidden="true"></a></li>
+        <li class="social-item"><a href="https://soundcloud.com/twowintersonly" class="fa fa-soundcloud" aria-hidden="true"></a></li>
+        <li class="social-item"><a href="https://vk.com/twowintersonly" class="fa fa-vk" aria-hidden="true"></a></li>
+      </ul>
+    </footer>
   </div>
 </body>
 </html>
