--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
   <title>About — Two Winters Only</title>
   <meta charset="UTF-8">
@@ -13,38 +13,38 @@
   <script src="js/script.js"></script>
 </head>
 <body>
-  <div class="page-wrapper">
-    <div class="page">
-      <header class="header">
-        <h1 class="logo-title"><a href="/">Two Winters Only</a></h1>
-        <p class="logo-subtitle">post-metal duet from Pushchino, Russia</p>
-        <nav class="nav">
-          <a href="#" class="fa fa-bars" aria-hidden="true"></a>
-          <ul class="nav-list">
-            <li class="nav-item"><a href="/">Home</a></li>
-            <li class="nav-item selected">About</li>
-            <li class="nav-item"><a href="discography">Discography</a></li>
-            <li class="nav-item"><a href="contact">Contact</a></li>
-          </ul>
-        </nav>
-      </header>
-      <article class="article">
-        <h2>Under construction</h2>
-        <!--
-        <p></p>
+  <div class="page">
+    <header class="header">
+      <div class="header-logo">
+        <a href="/">Two Winters Only</a>
+      </div>
+      <p class="header-title">post-metal duet from Pushchino, Russia</p>
+      <div class="header-slogan">Russian post-metal/ambient act Two Winters Only combines heavy guitar sound with gentle electronic soundscapes. The band defines their style as&nbsp;&ldquo;post-metal with non-metal attitude&rdquo;.</div>
+    </header>
+    <nav class="nav">
+      <ul class="nav-list">
+        <li class="nav-item"><a href="/">Home</a></li>
+        <li class="nav-item selected">About</li>
+        <li class="nav-item"><a href="discography">Discography</a></li>
+        <li class="nav-item"><a href="contact">Contact</a></li>
+      </ul>
+    </nav>
+    <main class="main">
+      <article class="article about">
+        <h2>About band</h2>
         <img src="images/two.jpg" alt="Two Winters Only" class="article-img">
-        -->
+        <p>More info coming soon...</p>
       </article>
-      <footer class="footer">
-        <ul class="social">
-          <li class="social-item"><a href="https://www.youtube.com/channel/UCr1UxgPRgd7GG3JZIl23Rzw" class="fa fa-youtube" aria-hidden="true"></a></li>
-          <li class="social-item"><a href="https://www.facebook.com/twowintersonlymusic" class="fa fa-facebook-official" aria-hidden="true"></a></li>
-          <li class="social-item"><a href="https://www.last.fm/music/Two+Winters+Only" class="fa fa-lastfm-square" aria-hidden="true"></a></li>
-          <li class="social-item"><a href="https://soundcloud.com/twowintersonly" class="fa fa-soundcloud" aria-hidden="true"></a></li>
-          <li class="social-item"><a href="https://vk.com/twowintersonly" class="fa fa-vk" aria-hidden="true"></a></li>
-        </ul>
-      </footer>
-    </div>
+    </main>
+    <footer class="footer">
+      <ul class="social">
+        <li class="social-item"><a href="https://www.youtube.com/channel/UCr1UxgPRgd7GG3JZIl23Rzw" class="fa fa-youtube" aria-hidden="true"></a></li>
+        <li class="social-item"><a href="https://www.facebook.com/twowintersonlymusic" class="fa fa-facebook-official" aria-hidden="true"></a></li>
+        <li class="social-item"><a href="https://www.last.fm/music/Two+Winters+Only" class="fa fa-lastfm-square" aria-hidden="true"></a></li>
+        <li class="social-item"><a href="https://soundcloud.com/twowintersonly" class="fa fa-soundcloud" aria-hidden="true"></a></li>
+        <li class="social-item"><a href="https://vk.com/twowintersonly" class="fa fa-vk" aria-hidden="true"></a></li>
+      </ul>
+    </footer>
   </div>
 </body>
 </html>
