--- a/index.html
+++ b/index.html
@@ -13,126 +13,159 @@
   <meta name="keywords" content="">
 </head>
 <body>
-  <div class="page-wrapper">
-    <div class="page main">
-      <section class="slides">
-        <div class="slide slide-bitsa">
-          <div class="release">
-            <div class="release-header">
-              <p class="release-caption">Last release</p>
-              <h2 class="release-title">Bitsa EP</h2>
-              <p class="release-additional">post-metal, dark jazz, dark ambient, 2016</p>
-            </div>
-            <div class="release-info">
-              <div class="release-info-cover">
-                <a class="release-link" href="discography.html#bitsa">
-                  <img src="images/bitsa/bitsa-thumbnail.jpg" alt="Bitsa EP, 2016">
-                </a>
+  <div class="page">
+    <header class="header">
+      <h1 class="header-logo">Two Winters Only</h1>
+      <p class="header-title">post-metal duet from Pushchino, Russia</p>
+      <div class="header-slogan">Russian post-metal/ambient act Two Winters Only combines heavy guitar sound with gentle electronic soundscapes. The band defines their style as&nbsp;&ldquo;post-metal with non-metal attitude&rdquo;.</div>
+    </header>
+    <nav class="nav">
+      <ul class="nav-list">
+        <li class="nav-item selected">Home</li>
+        <li class="nav-item"><a href="about">About</a></li>
+        <li class="nav-item"><a href="discography">Discography</a></li>
+        <li class="nav-item"><a href="contact">Contact</a></li>
+      </ul>
+    </nav>
+    <main class="main">
+      <div class="slides">
+        <ul class="slides-list">
+          <li class="slides-item slides-359">
+            <div class="release">
+              <div class="release-header">
+                <p class="release-caption">Last release</p>
+                <h2 class="release-title">359</h2>
+                <p class="release-additional">post-metal, 2021</p>
               </div>
-              <div class="release-info-desc">
-                <ol>
-                  <li>
-                    <a class="release-play-button" data-video-id="LTWcLZ8LloU" href="#">
-                      <i class="fa fa-play-circle" aria-hidden="true"></i> Messe
-                    </a>
-                  </li>
-                  <li>Recap</li>
-                  <li>Withered Apples</li>
-                </ol>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="slide slide-room">
-          <div class="release">
-            <div class="release-header">
-              <p class="release-caption">Release</p>
-              <h2 class="release-title">The Room EP</h2>
-              <p class="release-additional">post-metal, post-rock, 2014</p>
-            </div>
-            <div class="release-info">
-              <div class="release-info-cover">
-                <a class="release-link" href="discography.html#room">
-                  <img src="images/room/room-thumbnail.jpg" alt="The Room EP, 2014">
-                </a>
-              </div>
-              <div class="release-info-desc">
-                <ol>
-                  <li>
-                    <a class="release-play-button" data-video-id="FNIFhPkYdzI" href="#">
-                      <i class="fa fa-play-circle" aria-hidden="true"></i> Rabbit's Clock Pointer
-                    </a>
-                  </li>
-                  <li>17 (...try To Become That Shape)</li>
-                  <li>Rectifier</li>
-                  <li>Open Door</li>
-                </ol>
+              <div class="release-info">
+                <div class="release-info-cover">
+                  <a class="release-link" href="discography.html#359">
+                    <img src="images/359/359-thumbnail.jpg" alt="359, 2021">
+                  </a>
+                </div>
+                <div class="release-info-desc">
+                  <ol>
+                    <li>359</li>
+                    <li>31-05 part1</li>
+                    <li>Cosm</li>
+                    <li>Bicycle Rally</li>
+                    <li>9-11 part1</li>
+                    <li>9-11 part2</li>
+                    <li>Declann</li>
+                    <li>31-05 part2</li>
+                    <li>PS Happy Birthday</li>
+                  </ol>
+                </div>
               </div>
             </div>
-          </div>
-        </div>
-        <div class="slide slide-two">
-          <div class="release">
-            <div class="release-header">
-              <p class="release-caption">Release</p>
-              <h2 class="release-title">Two Winters Only</h2>
-              <p class="release-additional">post-metal, 2010</p>
-            </div>
-            <div class="release-info">
-              <div class="release-info-cover">
-                <a class="release-link" href="discography.html#two">
-                  <img src="images/two/two-thumbnail.jpg" alt="Two Winters Only (self-titled), 2010">
-                </a>
+          </li>
+          <li class="slides-item slides-bitsa">
+            <div class="release">
+              <div class="release-header">
+                <p class="release-caption">Release</p>
+                <h2 class="release-title">Bitsa EP</h2>
+                <p class="release-additional">post-metal, dark jazz, dark ambient, 2016</p>
               </div>
-              <div class="release-info-desc">
-                <ol>
-                  <li>Intro</li>
-                  <li>Winter Shades</li>
-                  <li>
-                    <a class="release-play-button" data-video-id="vGdYeTyj9Jc" href="#">
-                      <i class="fa fa-play-circle" aria-hidden="true"></i> Night Aquatic Ropes
-                    </a>
-                  </li>
-                  <li>Spring</li>
-                  <li>Spokes & Wheels</li>
-                  <li>Excuse for The Pain</li>
-                  <li>13</li>
-                  <li>Last Rime</li>
-                  <li>Outro</li>
-                </ol>
+              <div class="release-info">
+                <div class="release-info-cover">
+                  <a class="release-link" href="discography.html#bitsa">
+                    <img src="images/bitsa/bitsa-thumbnail.jpg" alt="Bitsa EP, 2016">
+                  </a>
+                </div>
+                <div class="release-info-desc">
+                  <ol>
+                    <li>
+                      <a class="release-play-button" data-video-id="LTWcLZ8LloU" href="#">
+                        <i class="fa fa-play-circle" aria-hidden="true"></i>
+                        <span class="release-track">Messe</span>
+                      </a>
+                    </li>
+                    <li>Recap</li>
+                    <li>Withered Apples</li>
+                  </ol>
+                </div>
               </div>
             </div>
-          </div>
-        </div>
-      </section>
-      <header class="header">
-        <h1 class="logo-title">Two Winters Only</h1>
-        <p class="logo-subtitle">post-metal duet from Pushchino, Russia</p>
-        <nav class="nav">
-          <a href="#" class="fa fa-bars" aria-hidden="true"></a>
-          <ul class="nav-list">
-            <li class="nav-item selected">Home</li>
-            <li class="nav-item"><a href="about">About</a></li>
-            <li class="nav-item"><a href="discography">Discography</a></li>
-            <li class="nav-item"><a href="contact">Contact</a></li>
-          </ul>
-        </nav>
-        <div class="slogan">Russian post-metal/ambient act Two Winters Only combines heavy guitar sound with gentle electronic soundscapes. The band defines their style as&nbsp;&ldquo;post-metal with non-metal attitude&rdquo;.</div>
-      </header>
-      <div class="slide-controls">
-        <button class="slide-control slide-control-prev"></button>
-        <button class="slide-control slide-control-next"></button>
-      </div>
-      <footer class="footer">
-        <ul class="social">
-          <li class="social-item"><a href="https://www.youtube.com/channel/UCr1UxgPRgd7GG3JZIl23Rzw" class="fa fa-youtube" aria-hidden="true"></a></li>
-          <li class="social-item"><a href="https://www.facebook.com/twowintersonlymusic" class="fa fa-facebook-official" aria-hidden="true"></a></li>
-          <li class="social-item"><a href="https://www.last.fm/music/Two+Winters+Only" class="fa fa-lastfm-square" aria-hidden="true"></a></li>
-          <li class="social-item"><a href="https://soundcloud.com/twowintersonly" class="fa fa-soundcloud" aria-hidden="true"></a></li>
-          <li class="social-item"><a href="https://vk.com/twowintersonly" class="fa fa-vk" aria-hidden="true"></a></li>
+          </li>
+          <li class="slides-item slides-room">
+            <div class="release">
+              <div class="release-header">
+                <p class="release-caption">Release</p>
+                <h2 class="release-title">The Room EP</h2>
+                <p class="release-additional">post-metal, post-rock, 2014</p>
+              </div>
+              <div class="release-info">
+                <div class="release-info-cover">
+                  <a class="release-link" href="discography.html#room">
+                    <img src="images/room/room-thumbnail.jpg" alt="The Room EP, 2014">
+                  </a>
+                </div>
+                <div class="release-info-desc">
+                  <ol>
+                    <li>
+                      <a class="release-play-button" data-video-id="FNIFhPkYdzI" href="#">
+                        <i class="fa fa-play-circle" aria-hidden="true"></i>
+                        <span class="release-track">Rabbit's Clock Pointer</span>
+                      </a>
+                    </li>
+                    <li>17 (...try To Become That Shape)</li>
+                    <li>Rectifier</li>
+                    <li>Open Door</li>
+                  </ol>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="slides-item slides-two">
+            <div class="release">
+              <div class="release-header">
+                <p class="release-caption">Release</p>
+                <h2 class="release-title">Two Winters Only</h2>
+                <p class="release-additional">post-metal, 2010</p>
+              </div>
+              <div class="release-info">
+                <div class="release-info-cover">
+                  <a class="release-link" href="discography.html#two">
+                    <img src="images/two/two-thumbnail.jpg" alt="Two Winters Only (self-titled), 2010">
+                  </a>
+                </div>
+                <div class="release-info-desc">
+                  <ol>
+                    <li>Intro</li>
+                    <li>Winter Shades</li>
+                    <li>
+                      <a class="release-play-button" data-video-id="vGdYeTyj9Jc" href="#">
+                        <i class="fa fa-play-circle" aria-hidden="true"></i>
+                        <span class="release-track">Night Aquatic Ropes</span>
+                      </a>
+                    </li>
+                    <li>Spring</li>
+                    <li>Spokes & Wheels</li>
+                    <li>Excuse for The Pain</li>
+                    <li>13</li>
+                    <li>Last Rime</li>
+                    <li>Outro</li>
+                  </ol>
+                </div>
+              </div>
+            </div>
+          </li>
         </ul>
-      </footer>
-    </div>
+        <div class="slides-controls">
+          <button class="slides-control slides-control-prev"></button>
+          <button class="slides-control slides-control-next"></button>
+        </div>
+      </div>
+    </main>
+    <footer class="footer">
+      <ul class="social">
+        <li class="social-item"><a href="https://www.youtube.com/channel/UCr1UxgPRgd7GG3JZIl23Rzw" class="fa fa-youtube" aria-hidden="true"></a></li>
+        <li class="social-item"><a href="https://www.facebook.com/twowintersonlymusic" class="fa fa-facebook-official" aria-hidden="true"></a></li>
+        <li class="social-item"><a href="https://www.last.fm/music/Two+Winters+Only" class="fa fa-lastfm-square" aria-hidden="true"></a></li>
+        <li class="social-item"><a href="https://soundcloud.com/twowintersonly" class="fa fa-soundcloud" aria-hidden="true"></a></li>
+        <li class="social-item"><a href="https://vk.com/twowintersonly" class="fa fa-vk" aria-hidden="true"></a></li>
+      </ul>
+    </footer>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="js/jquery.fancybox.min.js"></script>
