--- a/index.html
+++ b/index.html
@@ -159,11 +159,24 @@
     </main>
     <footer class="footer">
       <ul class="social">
-        <li class="social-item"><a href="https://www.youtube.com/channel/UCr1UxgPRgd7GG3JZIl23Rzw" class="fa fa-youtube" aria-hidden="true"></a></li>
-        <li class="social-item"><a href="https://www.facebook.com/twowintersonlymusic" class="fa fa-facebook-official" aria-hidden="true"></a></li>
-        <li class="social-item"><a href="https://www.last.fm/music/Two+Winters+Only" class="fa fa-lastfm-square" aria-hidden="true"></a></li>
-        <li class="social-item"><a href="https://soundcloud.com/twowintersonly" class="fa fa-soundcloud" aria-hidden="true"></a></li>
-        <li class="social-item"><a href="https://vk.com/twowintersonly" class="fa fa-vk" aria-hidden="true"></a></li>
+        <li class="social-item">
+          <a href="https://www.youtube.com/channel/UCr1UxgPRgd7GG3JZIl23Rzw" class="fa fa-youtube" aria-hidden="true" title="YouTube"></a>
+        </li>
+        <li class="social-item">
+          <a href="https://www.facebook.com/twowintersonlymusic" class="fa fa-facebook-official" aria-hidden="true" title="Facebook"></a>
+        </li>
+        <li class="social-item">
+          <a href="https://www.last.fm/music/Two+Winters+Only" class="fa fa-lastfm-square" aria-hidden="true" title="LastFM"></a>
+        </li>
+        <li class="social-item">
+          <a href="https://soundcloud.com/twowintersonly" class="fa fa-soundcloud" aria-hidden="true" title="Soundcloud"></a>
+        </li>
+        <li class="social-item">
+          <a href="https://vk.com/twowintersonly" class="fa fa-vk" aria-hidden="true" title="VK"></a>
+        </li>
+        <li class="social-item">
+          <a href="https://twowintersonly.bandcamp.com" class="fa fa-bandcamp" aria-hidden="true" title="Bandcamp"></a>
+        </li>
       </ul>
     </footer>
   </div>
