--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="styles/style.css">
   <link rel="stylesheet" href="styles/jquery.fancybox.css">
   <link rel="stylesheet" href="styles/modal-video.min.css">
+  <link rel="stylesheet" href="node_modules/@glidejs/glide/dist/css/glide.core.min.css">
   <link rel="shortcut icon" href="favicon.jpg">
   <link rel="apple-touch-icon" href="favicon.jpg">
   <meta name="description" content="">
@@ -29,131 +30,140 @@
     </nav>
     <main class="main">
       <div class="slides">
-        <ul class="slides-list">
-          <li class="slides-item slides-359">
-            <div class="release">
-              <div class="release-header">
-                <p class="release-caption">Last release</p>
-                <h2 class="release-title">359</h2>
-                <p class="release-additional">post-metal, 2021</p>
-              </div>
-              <div class="release-info">
-                <div class="release-info-cover">
-                  <a class="release-link" href="discography.html#359">
-                    <img src="images/359/359-thumbnail.jpg" alt="359, 2021">
-                  </a>
-                </div>
-                <div class="release-info-desc">
-                  <ol>
-                    <li>359</li>
-                    <li>31-05 part1</li>
-                    <li>Cosm</li>
-                    <li>Bicycle Rally</li>
-                    <li>9-11 part1</li>
-                    <li>9-11 part2</li>
-                    <li>Declann</li>
-                    <li>31-05 part2</li>
-                    <li>PS Happy Birthday</li>
-                  </ol>
-                </div>
-              </div>
-            </div>
-          </li>
-          <li class="slides-item slides-bitsa">
-            <div class="release">
-              <div class="release-header">
-                <p class="release-caption">Release</p>
-                <h2 class="release-title">Bitsa EP</h2>
-                <p class="release-additional">post-metal, dark jazz, dark ambient, 2016</p>
-              </div>
-              <div class="release-info">
-                <div class="release-info-cover">
-                  <a class="release-link" href="discography.html#bitsa">
-                    <img src="images/bitsa/bitsa-thumbnail.jpg" alt="Bitsa EP, 2016">
-                  </a>
-                </div>
-                <div class="release-info-desc">
-                  <ol>
-                    <li>
-                      <a class="release-play-button" data-video-id="LTWcLZ8LloU" href="#">
-                        <i class="fa fa-play-circle" aria-hidden="true"></i>
-                        <span class="release-track">Messe</span>
+        <div class="glide">
+          <div class="glide__track" data-glide-el="track">
+            <ul class="glide__slides">
+              <li class="glide__slide">
+                <div class="release">
+                  <div class="release-header">
+                    <p class="release-caption">Last release</p>
+                    <h2 class="release-title">359</h2>
+                    <p class="release-additional">post-metal, 2021</p>
+                  </div>
+                  <div class="release-info">
+                    <div class="release-info-cover">
+                      <a class="release-link" href="discography.html#359">
+                        <img src="images/359/359-thumbnail.jpg" alt="359, 2021">
                       </a>
-                    </li>
-                    <li>Recap</li>
-                    <li>Withered Apples</li>
-                  </ol>
+                    </div>
+                    <div class="release-info-desc">
+                      <ol>
+                        <li>359</li>
+                        <li>31-05 part1</li>
+                        <li>Cosm</li>
+                        <li>Bicycle Rally</li>
+                        <li>9-11 part1</li>
+                        <li>9-11 part2</li>
+                        <li>Declann</li>
+                        <li>31-05 part2</li>
+                        <li>PS Happy Birthday</li>
+                      </ol>
+                    </div>
+                  </div>
                 </div>
-              </div>
-            </div>
-          </li>
-          <li class="slides-item slides-room">
-            <div class="release">
-              <div class="release-header">
-                <p class="release-caption">Release</p>
-                <h2 class="release-title">The Room EP</h2>
-                <p class="release-additional">post-metal, post-rock, 2014</p>
-              </div>
-              <div class="release-info">
-                <div class="release-info-cover">
-                  <a class="release-link" href="discography.html#room">
-                    <img src="images/room/room-thumbnail.jpg" alt="The Room EP, 2014">
-                  </a>
-                </div>
-                <div class="release-info-desc">
-                  <ol>
-                    <li>
-                      <a class="release-play-button" data-video-id="FNIFhPkYdzI" href="#">
-                        <i class="fa fa-play-circle" aria-hidden="true"></i>
-                        <span class="release-track">Rabbit's Clock Pointer</span>
+              </li>
+              <li class="glide__slide">
+                <div class="release">
+                  <div class="release-header">
+                    <p class="release-caption">Release</p>
+                    <h2 class="release-title">Bitsa EP</h2>
+                    <p class="release-additional">post-metal, dark jazz, dark ambient, 2016</p>
+                  </div>
+                  <div class="release-info">
+                    <div class="release-info-cover">
+                      <a class="release-link" href="discography.html#bitsa">
+                        <img src="images/bitsa/bitsa-thumbnail.jpg" alt="Bitsa EP, 2016">
                       </a>
-                    </li>
-                    <li>17 (...try To Become That Shape)</li>
-                    <li>Rectifier</li>
-                    <li>Open Door</li>
-                  </ol>
+                    </div>
+                    <div class="release-info-desc">
+                      <ol>
+                        <li>
+                          <a class="release-play-button" data-video-id="LTWcLZ8LloU" href="#">
+                            <i class="fa fa-play-circle" aria-hidden="true"></i>
+                            <span class="release-track">Messe</span>
+                          </a>
+                        </li>
+                        <li>Recap</li>
+                        <li>Withered Apples</li>
+                      </ol>
+                    </div>
+                  </div>
                 </div>
-              </div>
-            </div>
-          </li>
-          <li class="slides-item slides-two">
-            <div class="release">
-              <div class="release-header">
-                <p class="release-caption">Release</p>
-                <h2 class="release-title">Two Winters Only</h2>
-                <p class="release-additional">post-metal, 2010</p>
-              </div>
-              <div class="release-info">
-                <div class="release-info-cover">
-                  <a class="release-link" href="discography.html#two">
-                    <img src="images/two/two-thumbnail.jpg" alt="Two Winters Only (self-titled), 2010">
-                  </a>
-                </div>
-                <div class="release-info-desc">
-                  <ol>
-                    <li>Intro</li>
-                    <li>Winter Shades</li>
-                    <li>
-                      <a class="release-play-button" data-video-id="vGdYeTyj9Jc" href="#">
-                        <i class="fa fa-play-circle" aria-hidden="true"></i>
-                        <span class="release-track">Night Aquatic Ropes</span>
+              </li>
+              <li class="glide__slide">
+                <div class="release">
+                  <div class="release-header">
+                    <p class="release-caption">Release</p>
+                    <h2 class="release-title">The Room EP</h2>
+                    <p class="release-additional">post-metal, post-rock, 2014</p>
+                  </div>
+                  <div class="release-info">
+                    <div class="release-info-cover">
+                      <a class="release-link" href="discography.html#room">
+                        <img src="images/room/room-thumbnail.jpg" alt="The Room EP, 2014">
                       </a>
-                    </li>
-                    <li>Spring</li>
-                    <li>Spokes & Wheels</li>
-                    <li>Excuse for The Pain</li>
-                    <li>13</li>
-                    <li>Last Rime</li>
-                    <li>Outro</li>
-                  </ol>
+                    </div>
+                    <div class="release-info-desc">
+                      <ol>
+                        <li>
+                          <a class="release-play-button" data-video-id="FNIFhPkYdzI" href="#">
+                            <i class="fa fa-play-circle" aria-hidden="true"></i>
+                            <span class="release-track">Rabbit's Clock Pointer</span>
+                          </a>
+                        </li>
+                        <li>17 (...try To Become That Shape)</li>
+                        <li>Rectifier</li>
+                        <li>Open Door</li>
+                      </ol>
+                    </div>
+                  </div>
+              </li>
+              <li class="glide__slide">
+                <div class="release">
+                  <div class="release-header">
+                    <p class="release-caption">Release</p>
+                    <h2 class="release-title">Two Winters Only</h2>
+                    <p class="release-additional">post-metal, 2010</p>
+                  </div>
+                  <div class="release-info">
+                    <div class="release-info-cover">
+                      <a class="release-link" href="discography.html#two">
+                        <img src="images/two/two-thumbnail.jpg" alt="Two Winters Only (self-titled), 2010">
+                      </a>
+                    </div>
+                    <div class="release-info-desc">
+                      <ol>
+                        <li>Intro</li>
+                        <li>Winter Shades</li>
+                        <li>
+                          <a class="release-play-button" data-video-id="vGdYeTyj9Jc" href="#">
+                            <i class="fa fa-play-circle" aria-hidden="true"></i>
+                            <span class="release-track">Night Aquatic Ropes</span>
+                          </a>
+                        </li>
+                        <li>Spring</li>
+                        <li>Spokes & Wheels</li>
+                        <li>Excuse for The Pain</li>
+                        <li>13</li>
+                        <li>Last Rime</li>
+                        <li>Outro</li>
+                      </ol>
+                    </div>
+                  </div>
                 </div>
-              </div>
-            </div>
-          </li>
-        </ul>
-        <div class="slides-controls">
-          <button class="slides-control slides-control-prev"></button>
-          <button class="slides-control slides-control-next"></button>
+              </li>
+            </ul>
+          </div>
+          <div class="glide__arrows" data-glide-el="controls">
+            <button class="glide__arrow glide__arrow--left" data-glide-dir="<">prev</button>
+            <button class="glide__arrow glide__arrow--right" data-glide-dir=">">next</button>
+          </div> 
+          <div class="glide__bullets" data-glide-el="controls[nav]">
+            <button class="glide__bullet" data-glide-dir="=0"></button>
+            <button class="glide__bullet" data-glide-dir="=1"></button>
+            <button class="glide__bullet" data-glide-dir="=2"></button>
+            <button class="glide__bullet" data-glide-dir="=3"></button>
+          </div>       
         </div>
       </div>
     </main>
@@ -183,6 +193,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="js/jquery.fancybox.min.js"></script>
   <script src="js/jquery-modal-video.min.js"></script>
+  <script src="node_modules/@glidejs/glide/dist/glide.min.js"></script>
   <script src="js/script.js"></script>
 </body>
 </html>
