Text edits and more

--- a/discography.html
+++ b/discography.html
@@ -70,6 +70,7 @@
           </div>
           <div class="release-footer">
             <p class="release-footer-text">
+              Dedicated to our hometown of Pushchino. And also a reminder that you can't go back anywhere.<br>
               Recorded and mixed at Aralot Studios.<br>
               Mastered by James Plotkin.
             </p>
@@ -77,6 +78,7 @@
               <div class="release-footer-download-title">Download:</div>
               <div class="release-footer-download-links">
                 <a href="https://twowintersonly.bandcamp.com/album/359"><i class="fa fa-bandcamp" aria-hidden="true"></i> bandcamp</a>
+                <a href="https://music.yandex.ru/album/15908024"><i class="fa fa-yandex" aria-hidden="true"></i> yandex</a>
               </div>
             </div>
           </div>
@@ -154,6 +156,7 @@
               <div class="release-footer-download-title">Download:</div>
               <div class="release-footer-download-links">
                 <a href="https://twowintersonly.bandcamp.com/album/the-room-ep"><i class="fa fa-bandcamp" aria-hidden="true"></i> bandcamp</a>
+                <a href="https://music.yandex.ru/album/17098995"><i class="fa fa-yandex" aria-hidden="true"></i> yandex</a>
               </div>
             </div>
           </div>
@@ -193,6 +196,7 @@
               <div class="release-footer-download-title">Download:</div>
               <div class="release-footer-download-links">
                 <a href="https://twowintersonly.bandcamp.com/album/two-winters-only"><i class="fa fa-bandcamp" aria-hidden="true"></i> bandcamp</a>
+                <a href="https://music.yandex.ru/album/3518512"><i class="fa fa-yandex" aria-hidden="true"></i> yandex</a>
                 <a href="https://itunes.apple.com/us/album/two-winters-only/id1118117191"><i class="fa fa-apple" aria-hidden="true"></i> music</a>
                 <a href="https://play.google.com/store/music/album/Two_Winters_Only_Two_Winters_Only?id=Bvwfjegzsqcz4hmrcxeyhdvux7a"><i class="fa fa-android" aria-hidden="true"></i> play</a>
               </div>
