--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
     <main class="main">
       <article class="article about">
         <h2>About band</h2>
-        <img src="images/two.jpg" alt="Two Winters Only" class="article-img">
+        <img src="images/card.jpg" alt="Two Winters Only" class="article-img">
         <p>More info coming soon...</p>
       </article>
     </main>
