--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                   <div class="release-header">
                     <p class="release-caption">Last release</p>
                     <h2 class="release-title">359</h2>
-                    <p class="release-additional">post-metal, 2021</p>
+                    <p class="release-additional">post-rock, industrial rock, post-metal, drone, 2021</p>
                   </div>
                   <div class="release-info">
                     <div class="release-info-cover">
@@ -47,7 +47,10 @@
                     </div>
                     <div class="release-info-desc">
                       <ol>
-                        <li>359</li>
+                        <li><a class="release-play-button" data-video-id="KXmhltTxwOk" href="#">
+                          <i class="fa fa-play-circle" aria-hidden="true"></i>
+                          <span class="release-track">359</span>
+                        </a></li>
                         <li>31-05 part1</li>
                         <li>Cosm</li>
                         <li>Bicycle Rally</li>
@@ -122,7 +125,7 @@
                   <div class="release-header">
                     <p class="release-caption">Release</p>
                     <h2 class="release-title">Two Winters Only</h2>
-                    <p class="release-additional">post-metal, 2010</p>
+                    <p class="release-additional">post-metal, post-rock, electronic, 2010</p>
                   </div>
                   <div class="release-info">
                     <div class="release-info-cover">
