Убрал band, т.к. bandа нету уже)

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
     </nav>
     <main class="main">
       <article class="article about">
-        <h2>About band</h2>
+        <h2>About</h2>
         <img src="images/card.jpg" alt="Two Winters Only" class="article-img">
         <p>More info coming soon...</p>
       </article>
